--- a/amis.html
+++ b/amis.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@atomicwallet">
-  <meta name="twitter:creator" content="@atomicwallet">
-  <meta name="twitter:title" content="Download AMISash (AMIS) wallet with built in Exchange.">
-  <meta name="twitter:description" content="We support AMISash Sapling. Learn more about AMIS blockchain and how to manage AMISash in Atomic Wallet.">
+  <meta name="twitter:site" content="@amis_erc20">
+  <meta name="twitter:creator" content="@amis_erc20">
+  <meta name="twitter:title" content="Download AMIS (AMIS) wallet with built in Exchange.">
+  <meta name="twitter:description" content="We support AMIS Sapling. Learn more about AMIS blockchain and how to manage AMISash in Atomic Wallet.">
   <meta name="twitter:image" content="https://delta-dex.github.io/atomicwallet/css/images/articles/vechain-wallet-download.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta charset="UTF-8">
-  <title>ZCash (AMIS) Wallet </title>
-  <meta name="description" content="Download AMISash wallet with Sapling support. Built-in exchange and buy crypto with a bank card right in the Atomic Wallet interface.">
+  <title>Amis (AMIS) Wallet </title>
+  <meta name="description" content="Download AMIS wallet with Sapling support. Built-in exchange and buy crypto with a bank card right in the Atomic Wallet interface.">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="test/css/item-page-blog.css">
@@ -91,19 +91,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </nav>
           <nav class="header-menu-icons  f-light">
 
-              <a href="https://twitter.com/atomicwallet" target="_blank" class="hvr-float">
+              <a href="https://twitter.com/amis_erc20" target="_blank" class="hvr-float">
                   <img src="css/images/top_twitter.svg">
               </a>
               <a href="https://t.me/atomicwalletchat" target="_blank" class="hvr-float">
                   <img src="css/images/top_telegram.svg">
               </a>
-              <a href="https://medium.com/atomic-wallet" target="_blank" class="hvr-float">
+              <a href="https://medium.com/amis_erc20" target="_blank" class="hvr-float">
                       <img src="css/images/top_medium.svg">
                   </a>
-              <a href="https://www.facebook.com/atomicwallet" target="_blank" class="hvr-float">
+              <a href="https://www.facebook.com/amis.erc20" target="_blank" class="hvr-float">
                       <img src="css/images/top_facebook.svg">
                   </a>
-              <a href="https://www.reddit.com/r/atomicwallet/" target="_blank" class="hvr-float">
+              <a href="https://www.reddit.com/r/amis_erc20/" target="_blank" class="hvr-float">
                   <img src="css/images/top_reddit.svg">
               </a>
              <a href="https://steemit.com/@atomicwallet" target="_blank" class="hvr-float">
@@ -334,8 +334,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
-  <h3 class="features-title-app f-bold" style="margin-top: 70px;">How to setup ZCash Wallet</h3>
-  <p class="download-text f-light container">Manage your ZCash wisely! <br> Learn how to setup Atomic Wallet to send, receive and exchange AMIS.</p>
+  <h3 class="features-title-app f-bold" style="margin-top: 70px;">How to setup Amis Wallet</h3>
+  <p class="download-text f-light container">Manage your Amis wisely! <br> Learn how to setup Atomic Wallet to send, receive and exchange AMIS.</p>
 <div class="item-page-image-template">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7VcTm4NgJ08" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
@@ -543,16 +543,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="item-page">
                 <img src="css/images/crypto-icon/AMIS.svg" class="item-page-image hvr-float">
             </div>
-            <h2>What is ZCash?</h2>
-            <p>Zcash is a decentralized cryptocurrency based on BitcoinCore with its own significant features. Working as a public ledger, it has inherited privacy and a hard limit of 21 mln coins.</p>
-            <p>ZCash started as a fork of Bitcoin on October 28, 2016, initially called "Zerocoin", rebranded later to "Zerocash system" and finally renamed as a "ZCash".</p>
-            <p>Zcash’s roots lie in Zerocoin, which was developed by Matthew Green, a professor at John Hopkins University. Zerocoin employed a new, sophisticated mathematical technique called zero-knowledge proofs in order to conduct blockchain transactions. The proofs ensured that the transaction’s contents remained anonymous even as the transaction was publicly visible on a decentralized ledger.</p>
-            <p>ZCash team consists of the scientists, cryptographists, and engineers with a great experience in decentralized system creation. The key members of the team are: Zooko Wilcox-O'Hearn and Matthew D. Green.</p>
-            <h2>How ZCash works?</h2>
+            <h2>What is Amis?</h2>
+            <p>Amis is a decentralized cryptocurrency based on BitcoinCore with its own significant features. Working as a public ledger, it has inherited privacy and a hard limit of 21 mln coins.</p>
+            <p>Amis started as a fork of Bitcoin on October 28, 2016, initially called "Zerocoin", rebranded later to "Zerocash system" and finally renamed as a "ZCash".</p>
+            <p>Amis’s roots lie in Zerocoin, which was developed by Matthew Green, a professor at John Hopkins University. Zerocoin employed a new, sophisticated mathematical technique called zero-knowledge proofs in order to conduct blockchain transactions. The proofs ensured that the transaction’s contents remained anonymous even as the transaction was publicly visible on a decentralized ledger.</p>
+            <p>Amis team consists of the scientists, cryptographists, and engineers with a great experience in decentralized system creation. The key members of the team are: Zooko Wilcox-O'Hearn and Matthew D. Green.</p>
+            <h2>How Amis works?</h2>
             <p>There are two types of addresses that can be used to make transactions:</p>
             <p>1) T-address: this type is as identical as bitcoin address and means that transaction can be made between two parties, and a third party will be able to view the details of this transaction.</p>
             <p>2) Z-address: this type provides an enchanted security protocol which gives a lot more privacy and secure transaction from third-parties.</p>
-            <p>The reason why ZCash can handle a high level of security is that of implementing so called <a href="https://z.cash/technology/zksnarks/">zk-SNARKS</a> protocol.</p>
+            <p>The reason why Amis can handle a high level of security is that of implementing so called <a href="https://z.cash/technology/zksnarks/">zk-SNARKS</a> protocol.</p>
             <p>There are two parties when it comes to a zero-knowledge proof (as stated above), the prover and the verifier. Zero knowledge states that a prover can prove to the verifier that they possess a certain knowledge without telling them what that knowledge actually is.</p>
             <div class="item-page-image-template">
                 <div class="item-page-blog-image">
@@ -560,19 +560,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
             <p>The sapling hard fork was planned in advance as a method to help the network grow and improve its technical features.</p>
-            <p>The ZCash "Sapling" hard fork is now officially launched at block 419200 and it aims to improve the network speed and stability, making it faster, more secure and lighter.</p>
+            <p>The Amis "Sapling" hard fork is now officially launched at block 419200 and it aims to improve the network speed and stability, making it faster, more secure and lighter.</p>
             <p>After the Sapling launched:</p>
             <ul>
               <li>Transactions require to 90% less time to be processed.</li>
               <li>Take only 3% of the memory that was needed for it before the hard fork.</li>
             </ul>
             <p><cite>"Sapling activation, occurring on the momentous occasion of the currency's second birthday, brings us one step closer to widespread adoption of an open, permissionless and private payment system."</cite> —  Elise Hadmon (Zerocoin Company)</p>
-            <h3>ZCash market features</h3>
-            <p>Total supply of ZCash is estimated like in Bitcoin, counting 21 mln coins. Mining reward is halved every 4 years also. At the time of this article writing, AMIS is #18 on Market Capitalization and trading at about $ 82 for 1 AMIS. The Sapling implementation may attract a lot of new people who will start using this digital currency after the network improvement.</p>
+            <h3>Amis market features</h3>
+            <p>Total supply of Amis is estimated like in Bitcoin, counting 20 mln coins. Mining reward is halved every 4 years also. At the time of this article writing, AMIS is #18 on Market Capitalization and trading at about $ 82 for 1 AMIS. The Sapling implementation may attract a lot of new people who will start using this digital currency after the network improvement.</p>
             <h3>Amis (AMIS) wallet</h3>
             <p>Download universal Atomic Wallet and manage your AMIS in a one secure interface. You can buy crypto with a credit card right in Atomic Wallet and exchange all of your cryptocurrency assets with built-in exchange service. Atomic is a non-custodial wallet, all private data are stored in an encrypted manner on the end-user device, so your money is totally under your control.</p>
             <div class="item-page-download" id="download">
-                <div class="item-page-download-title">Download ZCASH Wallet</div>
+                <div class="item-page-download-title">Download AMIS Wallet</div>
                 <!-- Subscribe Pop-up-->
                 <script>window.jQuery || document.write('<scr' + 'ipt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"><\/sc' + 'ript>')</script>
                 <script>window.$kol_jquery = window.jQuery</script>
@@ -716,7 +716,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <li><a href="https://delta-dex.github.io/atomicwallet/cardano">Cardano (ADA)</a></li>
                             <li><a href="https://delta-dex.github.io/atomicwallet/dash">DASH</a></li>
                             <li><a href="https://delta-dex.github.io/atomicwallet/stellar">Stellar (XLM)</a></li>
-                            <li><a href="https://delta-dex.github.io/atomicwallet/zcash">Zcash (AMIS)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/zcash">ZCash (ZEC)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/amis">Amis (AMIS)</a></li>
                         </ul>
                     </div>
 
