--- a/how-to-trade-amis.html
+++ b/how-to-trade-amis.html
@@ -66,7 +66,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://delta-dex.github.io/atomicwallet/buy-bitcoin">Buy Bitcoin</a>
         <a href="/assets">Assets</a>
         <a href="/downloads" class="hvr-grow">Download</a>
-        <a href="https://support.atomicwallet.io/support/home" target="_blank" class="hvr-grow">Support</a>
+        <a href="https://delta-dex.github.io/atomicwallet/support.html" target="_blank" class="hvr-grow">Support</a>
         <a href="/blog">Blog</a>
         <button class="header-menu-mobile-close" id="menu-button-close"></button>
     </div>
@@ -131,17 +131,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
 
              <h2 id="return">Preface</h2>
-             <p>The team at Atomic Wallet cherishes what its large and friendly community contributes to the project. We believe that together we can push the industry forward and provide secure and trustless methods for cryptocurrency management. With high hopes, Atomic Wallet releases its underlying ERC20 token, called Atomic Wallet Coin (AWC). And from now on, you can trade AWC on Idex, one of the largest decentralized exchanges.</p>
+             <p>The team at Delta Dex Atomic Wallet cherishes what its large and friendly community contributes to the project. We believe that together we can push the industry forward and provide secure and trustless methods for cryptocurrency management. With high hopes, Atomic Wallet releases its underlying ERC20 token, called Atomic Wallet Coin (AWC). And from now on, you can trade AWC on Idex, one of the largest decentralized exchanges.</p>
 
              <h3>Token utility</h3>
-             <p>AWC is a utility token that serves as fuel for extra features, rewards, <a href="">bounty program</a> and other partnership privileges. You can earn AWC as well as you can buy the token on the trading platform. Spread the word about Atomic Wallet by making articles, reviews, videos and other interesting content to get your reward. None of your content will be left unattended. Get your promo code and share it with others. For each newcomer you encouraged to use Atomic, you will be rewarded. Other projects can also become our partner for mutual promo and get AWC under special conditions.</p>
+             <p>AMIS is a utility token that serves as fuel for extra features, rewards, <a href="">bounty program</a> and other partnership privileges. You can earn AWC as well as you can buy the token on the trading platform. Spread the word about Atomic Wallet by making articles, reviews, videos and other interesting content to get your reward. None of your content will be left unattended. Get your promo code and share it with others. For each newcomer you encouraged to use Atomic, you will be rewarded. Other projects can also become our partner for mutual promo and get AWC under special conditions.</p>
                <div class="item-page-image-template">
 
                 <div class="item-page-blog-image">
              <iframe width="560" height="315" src="https://www.youtube.com/embed/QOtLCK90oxk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div></div>
              <h3>Benefits for investors</h3>
-             <p>The supply of Atomic Wallet Coin is limited to 20M AMIS. To keep the AMIS rate sustained, we will buy back AMIS from our profit each quarter (once it’s profitable) and burn. This measure will help all AWC HODLers rest assured they won’t lose their investments on market swings.</p>
+             <p>The supply of Atomic Mediation Instrument Solution is limited to 20M AMIS. To keep the AMIS rate sustained, we will buy back AMIS from our profit each quarter (once it’s profitable) and burn. This measure will help all AWC HODLers rest assured they won’t lose their investments on market swings.</p>
 
              <h3>How to trade AMIS on AMISDEX?</h3>
                <p>Open the exchange website <a href="http://amisdex.amisolution.net/exchange/?pairId=AMIS-ETH">amisdex.amisolution.net</a>. Create the new Ethereum wallet or unlock the existing one (you may trade right from Atomic Ethereum address by importing <a href="https://atomicwallet.io/what-are-private-keys-and-how-they-work">private keys</a> to IDEX). Since IDEX is decentralized, you have full control over your funds, so your private keys belong only to you. When creating, follow the recommendations on the page.</p>
@@ -172,7 +172,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
               </div>
               <br>
-               <p>Now you can buy AWC and trade it. Go to <a href="https://amisdex.amisolution.net/exchange/?pairId=AMIS-ETH">AMISDEX</a> and scroll down to the “Buy AWC” section.</p>
+               <p>Now you can buy AMIS and trade it. Go to <a href="https://amisdex.amisolution.net/exchange/?pairId=AMIS-ETH">AMISDEX</a> and scroll down to the “Buy AWC” section.</p>
                                               <div class="item-page-image-template">
                 <div class="item-page-blog-image">
                 <img src="css/images/articles/idex-make-order.png" alt="Make order on AMISDEX to buy AMIS" style="">
@@ -197,7 +197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <img src="css/images/articles/idex-balance-withdraw.png" alt="You can withdraw AMIS from AMISDEX" style="">
               </div>
               </div>
-                  <p>Look how simple it is! Atomic is not gonna stop on Idex. We’re also available on <a href="https://forkdelta.app/#!/trade/0x949bEd886c739f1A3273629b3320db0C5024c719-ETH">ForkDelta</a> and will make our way to other exchanges. Stay tuned with Atomic Wallet and follow our updates!</p>
+                  <p>Look how simple it is! Atomic is not gonna stop on AmisDex. We’re also available on <a href="https://forkdelta.app/#!/trade/0x949bEd886c739f1A3273629b3320db0C5024c719-ETH">ForkDelta</a> and will make our way to other exchanges. Stay tuned with Atomic Wallet and follow our updates!</p>
                   <p>In case of any questions, don’t hesitate to ask us on Telegram channel or at <a href="mailto:info@amisolution.net">info@amisolution.net</a></p>
                   <p>Happy trading, Cryptonauts!</p>
                   <br>
