--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@ In addition to being a decentralized wallet AW gives you the ability to do token
                     <a href="https://twitter.com/amis_erc20" target="_blank">
                         <img src="css/images/top_twitter.svg">
                     </a>
-                    <a href="https://t.me/atomicwalletchat" target="_blank">
+                    <a href="https://t.me/amis_token" target="_blank">
                         <img src="css/images/top_telegram.svg">
                     </a>
                     <a href="https://github.com/delta-dex/atomicwallet" target="_blank">
@@ -1259,7 +1259,7 @@ In addition to being a decentralized wallet AW gives you the ability to do token
                         <div class="footer-new-col-title">Amis Delta Dex Atomic Wallet</div>
                         <ul class="f-light">
                           <li><a href="https://support.atomicwallet.io/">Support</a></li>
-                           <li><a href="https://t.me/atomicwalletchat">Telegram chat</a></li>
+                           <li><a href="https://t.me/amis_token">Telegram chat</a></li>
                             <li><a href="https://delta-dex.github.io/atomicwallet/terms-of-service">Terms of service</a></li>
                             <li><a href="https://delta-dex.github.io/atomicwallet/privacy">Privacy policy</a></li>
                             <li><a href="https://drive.google.com/drive/folders/1zbu1nKCBq2zNCnEtjWsw3oMJei6aFSuZ">Press Kit</a></li>
