--- a/amis.html
+++ b/amis.html
@@ -656,7 +656,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="https://twitter.com/amis_erc20" target="_blank">
                         <img src="css/images/top_twitter.svg">
                     </a>
-                    <a href="https://t.me/atomicwalletchat" target="_blank">
+                    <a href="https://t.me/amis_token" target="_blank">
                         <img src="css/images/top_telegram.svg">
                     </a>
                     <a href="https://github.com/delta-dex/atomicwallet" target="_blank">
@@ -681,7 +681,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="footer-new-col-title">Atomic Wallet</div>
                         <ul class="f-light">
                           <li><a href="https://delta-dex.github.io/atomicwallet/support.html">Support</a></li>
-                           <li><a href="https://t.me/atomicwalletchat">Telegram chat</a></li>
+                           <li><a href="https://t.me/amis_token">Telegram chat</a></li>
                             <li><a href="https://delta-dex.github.io/atomicwallet/terms-of-service">Terms of service</a></li>
                             <li><a href="https://delta-dex.github.io/atomicwallet/privacy">Privacy policy</a></li>
                             <li><a href="https://drive.google.com/drive/folders/1zbu1nKCBq2zNCnEtjWsw3oMJei6aFSuZ">Press Kit</a></li>
