--- a/amis.html
+++ b/amis.html
@@ -94,7 +94,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <a href="https://twitter.com/amis_erc20" target="_blank" class="hvr-float">
                   <img src="css/images/top_twitter.svg">
               </a>
-              <a href="https://t.me/atomicwalletchat" target="_blank" class="hvr-float">
+              <a href="https://t.me/amis_token" target="_blank" class="hvr-float">
                   <img src="css/images/top_telegram.svg">
               </a>
               <a href="https://medium.com/amis_erc20" target="_blank" class="hvr-float">
